<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/selectedCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="110dp"
        android:gravity="center"
        android:text="@string/city_field"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/temp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/current_temperature_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/current_temperature_field"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feel"
        app:layout_constraintVertical_bias="0.044"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/feel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/feel"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/feel_temperature_field"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/feel_temperature_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/feel_temperature_field"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/selectedCity"
        app:srcCompat="@drawable/sun_weather_13170" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="settings"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>